# ACS_homeworks

./: .gitignore.rtf
HW_5/ACS_Rakhmatullin_207/: CMakeLists.txt  main.cpp
Hw_1/: Отчет_АВС_1.pages
Hw_1/AVS_Rakhmatullin207_hw1/: CMakeLists.txt  checkers.cpp  checkers.h  checkers.s  container.cpp  container.h  container.s  functional.cpp  functional.h  functional.s  language.cpp  language.h  language.s  main.cpp  main.s  object_oriented.cpp  object_oriented.h  object_oriented.s  procedural.cpp  procedural.h  procedural.s  rnd.cpp  rnd.h  rnd.s
Hw_1/AVS_Rakhmatullin207_hw1/Answers/Test1/: outfile01
Hw_1/AVS_Rakhmatullin207_hw1/Answers/Test2/: outfile02
Hw_1/AVS_Rakhmatullin207_hw1/Tests/: test01  test03  test04
Hw_2/AVS_Rakhmatullin207_hw2/: CMakeLists.txt  checkers.cpp  checkers.h  container.cpp  container.h  functional.cpp  functional.h  language.cpp  language.h  main.cpp  object_oriented.cpp  object_oriented.h  procedural.cpp  procedural.h  rnd.h
Hw_2/AVS_Rakhmatullin207_hw2/Answers/Test1/: outfile02
Hw_2/AVS_Rakhmatullin207_hw2/Answers/Test2/: outfile01
Hw_2/AVS_Rakhmatullin207_hw2/Answers/Test4/: outfile01  outfile02
Hw_2/AVS_Rakhmatullin207_hw2/Tests/: test02
Hw_3/AVS_Rakhmatullin_hw3/: checkers.py  container.py  extender.py  functional.py  main.py  object_oriented.py  procedural.py  readStrArray.py
Hw_3/AVS_Rakhmatullin_hw3/Answers/Test1/: oufile2  outfile02  outfile1
Hw_3/AVS_Rakhmatullin_hw3/Answers/Test2/: outfile01  outfile02
Hw_4/Avs_Rakhmatullin_hw4/: ReadMe.txt  main  main.s
Hw_4/Avs_Rakhmatullin_hw4/Tests/: test05
(+10 files in other folders)
